@@ -16,6 +16,7 @@
 - added `watcher` event for the main process in `debug` or `release` mode with the watcher
 - added HTML escaping for meta tags
 - added `WebSocketClient.destroy()` method
+- added new command `refresh_cmd`
 - fixed `Mail.attachmentfs()`
 - fixed dynamic routing
 
